# rituo

./: DEPLOYMENT.md  DEPLOYMENT_DIGITAL_OCEAN.md  DEPLOYMENT_SIMPLE.md  README.md  VERCEL_DEPLOYMENT.md  deploy.sh  docker-compose.production.yml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: deploy.yml
server/: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  env.production.example  main.py  pyproject.toml  server.py  start.py
server/api/: ai_routes.py  auth_routes.py  chat_routes.py
server/auth/: auth_info_middleware.py  dependencies.py  fastmcp_google_auth.py  frontend_auth.py  google_auth.py  google_remote_auth_provider.py  mcp_session_middleware.py  oauth21_integration.py  oauth21_session_store.py  oauth_callback_server.py  oauth_common_handlers.py  oauth_responses.py  scopes.py  service_decorator.py  service_decorator_oauth21.py.bak
server/core/: api_enablement.py  comments.py  config.py  context.py  server.py  utils.py
server/database/: connection.py  models.py
server/gcalendar/: calendar_tools.py
server/gmail/: gmail_tools.py
server/gtasks/: tasks_tools.py
server/services/: ai_service.py  chat_service.py  mcp_client.py
src/app/: layout.tsx  page.tsx
src/app/chat/: page.tsx
src/app/debug/: page.tsx
src/app/login/: page.tsx
src/app/oauth-success/: page.tsx
src/components/landing/: cta-section.tsx  features-section.tsx  footer.tsx  hero-section.tsx  navigation.tsx  stats-section.tsx
src/components/ui/: api-key-setup.tsx
